FIX specializations scroll z-index

--- a/src/index.css
+++ b/src/index.css
@@ -157,3 +157,11 @@ main {
   }
   z-index: 1;
 }
+
+.z-i-1 {
+  z-index: 1;
+}
+
+.z-i-m1 {
+  z-index: -1;
+}
